# uTracker

./: .auth_config  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  myDb.db  uTracker_server
build-client-Qt-Debug/.cmake/api/v1/reply/: codemodel-v2-5156a6cccb5605a2f539.json  codemodel-v2-60922f4564315d974672.json  index-2021-03-15T02-03-40-0095.json  index-2021-03-16T17-17-16-0560.json  target-ResponsesLib-Debug-5360110888c85ce79c6b.json  target-ResponsesLib-Debug-6d1f3cff90f5af4249ce.json  target-source-Debug-82ec87b17b79b062a52b.json  target-utracker-Debug-12ee80905ef5669da1ee.json  target-utracker-Debug-200001d237608c0b3fc4.json
client/: CMakeLists.txt  client.cpp  main.cpp
client/Items/: Items.pro  authorization.cpp  authorization.h  main.cpp  main.qml  qml.qrc  usermanager.cpp  usermanager.h
client/Items/Buttons/: S_Button_1.qml  S_Input_1.qml
client/Items/Components/: S_Input_1.qml  UserForms.qml
client/Items/Components/src/: card.cpp
client/Items/Windows/: CardItem.qml  CardListItem.qml  CardView.qml  DeskItem.qml  InfoSidebar.qml  MainAccountWindow.qml  SignIn.qml  SignUp.qml
client/Items/model/: cardlistsmodel.cpp  cardlistsmodel.h  cardsmodel.cpp  cardsmodel.h
client/src/: CMakeLists.txt  Client.cpp  Client.h  ColaborantsModel.cpp  ColaborantsModel.h  Router.cpp  Router.h  WorkflowsModel.cpp  WorkflowsModel.h  authwindow.cpp  authwindow.h  client.cpp  client.h  googleauth.cpp  googleauth.h  kanbanmodel.cpp  kanbanmodel.h  main.qml  qml.qrc  requests.cpp  requests.h  responsehandler.cpp  taskpanelmodel.cpp  taskpanelmodel.h
client/src/Windows/: CardItem.qml  DeskItem.qml  SignIn.qml  SignUp.qml
client/src/models/: CMakeLists.txt  CheckboxPropertyModel.cpp  CheckboxPropertyModel.h  ColaborantsModel.cpp  ColaborantsModel.h  DailyPlanModel.cpp  DailyPlanModel.h  KanbanModel.cpp  KanbanModel.h  StatisticModel.cpp  StatisticModel.h  TaskDescriptionModel.cpp  TaskDescriptionModel.h  TaskpanelModel.cpp  TaskpanelModel.h  WorkflowsModel.cpp  WorkflowsModel.h
client/src/qml/: Authorization.qml  RegisterWidow.qml  authorization.qml  authwindow.qml  calendarview.qml  contactsview.qml  contolbutton.qml  headerpanel.qml  kanbanview.qml  maincontrolpanel.qml  mainwindowview.qml  menubutton.qml  workflowpane.qml  workflowsview.qml
client/src/qml/authwindow/: Authorization.qml  RegisterWidow.qml  authwindow.qml
client/src/qml/components/: Contolbutton.qml  DatePicker.qml  Menubutton.qml  Taskview.qml
client/src/qml/dailyplanwindow/: Dailyplaneview.qml
client/src/qml/mainwindow/: Contolbutton.qml  Headerpanel.qml  Kanbanview.qml  Maincontrolpanel.qml  Mainwindowview.qml  Menubutton.qml  Taskview.qml  Workflowpane.qml  Workflowsview.qml
client/src/qml/statisticwindow/: Statisticview.qml
client/src/qml/workflowswindow/: InviteColaborantDialog.qml  Kanbanview.qml  TaskDialog.qml  TaskDiscriptionView.qml  Taskview.qml  WorkflowDialog.qml  Workflowpane.qml  Workflowsview.qml
client/src/responses/: AbstractResponseHandler.cpp  AbstractResponseHandler.h  ArchiveWorkflowResponseHandler.cpp  ArchiveWorkflowResponseHandler.h  AuthorisationResponseHandler.cpp  AuthorisationResponseHandler.h  CMakeLists.txt  CreateDailyTaskResponseHandler.cpp  CreateDailyTaskResponseHandler.h  CreateWorkflowResponseHandler.cpp  CreateWorkflowResponseHandler.h  EditPanelTitleResponseHandler.cpp  EditPanelTitleResponseHandler.h  EditWorkflowResponseHandler.cpp  EditWorkflowResponseHandler.h  GetDailyPlanTasksResponseHandler.cpp  GetDailyPlanTasksResponseHandler.h  GetPanelResponseHandler.cpp  GetPanelResponseHandler.h  GetPanelTasksResponseHandler.cpp  GetPanelTasksResponseHandler.h  GetTagsResponseHandler.cpp  GetTagsResponseHandler.h  GetTaskDescriptionResponseHandler.cpp  GetTaskDescriptionResponseHandler.h  GetTaskDoneStatusResponseHandler.cpp  GetTaskDoneStatusResponseHandler.h  GetTaskResponseHandler.cpp  GetTaskResponseHandler.h  GetTaskTitleUpdatingResponseHandler.cpp  GetTaskTitleUpdatingResponseHandler.h  GetTaskUpdatingResponseHandler.cpp  GetTaskUpdatingResponseHandler.h  GetTaskWorkerResponseHandler.cpp  GetTaskWorkerResponseHandler.h  GetTaskWorkersResponseHandler.cpp  GetTaskWorkersResponseHandler.h  GetWorkStatusResponseHandler.cpp  GetWorkStatusResponseHandler.h  GetWorkflowColaborantsResponseHandler.cpp  (+25 more)
client/translations/: en_AS.ts
client_1/: main.cpp
client_1/src/: CMakeLists.txt  client.cpp  client.h  hash.cpp  hash.h  requests.cpp  requests.h  responsehandler.cpp  responsehandler.h
server/: API.md  CMakeLists.txt  main.cpp
server/Source/: CMakeLists.txt  connection.cpp  connection.h  database.h  hash.cpp  responses.h  server.h
server/Source/Core/: CMakeLists.txt
server/Source/Core/Private/: Application.cpp  ApplicationContext.cpp  Core.cpp  Server.cpp
server/Source/Core/Public/: Application.h  ApplicationContext.h  Core.h  Server.h  TaskInterface.h
server/Source/Crypto/: CMakeLists.txt
server/Source/Crypto/Private/: CryptoSSL.cpp  SSLSocket.cpp
server/Source/Crypto/Public/: CryptoSSL.h  SSLSocket.h
server/src/: CMakeLists.txt  OAuth.cpp  OAuth.h  Responses.cpp  Responses.h  client.cpp  client.hpp  connection.cpp  connection.h  database.cpp  database.h  hash.cpp  hash.h  responses.cpp  responses.h  runnable.cpp  runnable.h  server.cpp  server.h  thread.cpp  thread.h
